--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
-    <!-- eigene Stile und Hauptskript -->
+   <!--Leaflet providers-->
+   <script src="https://unpkg.com/leaflet-providers@latest/leaflet-providers.js"></script>
+   
+   <!-- eigene Stile und Hauptskript -->
     <link rel="stylesheet" href="main.css" />
     <script defer src="main.js"></script>
 </head>
